I've added json loading. Also i've added parents filling from json